--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,8 @@
 #+TITLE: Readme
 
 * how to run code
-- python -m source venv/bin/activate
+- python3 -m venv env --upgrade-deps
+- source env/bin/activate
 - pip install -r requirements
 
 * binance vision scraper
